# pnec

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  create_experiments.sh  kitti_docker.sh  parallel_kitti.sh  run_simulation.sh  uncertainty_extraction.sh  uncertainty_extraction_vo.sh
cmake/: FindSuiteSparse.cmake  UpdateCacheVariable.cmake
data/: config_kitti00-02.yaml  config_kitti03.yaml  config_kitti04-10.yaml  test_config.yaml
data/tracking/ICL/: icl.json
data/tracking/KITTI/: 02.json  04.json  08.json  09.json
include/common/: camera.h  common.h  converter.h  timing.h  visualization.h
include/features/: base_matcher.h  tracking_matcher.h
include/features/tracking/: klt_patch_optical_flow.h  pnec_patch.h
include/frames/: base_frame.h  keypoints.h  tracking_frame.h
include/io/: config.h  dataset_loader.h  odometry_output.h
include/odometry/: frame_processing.h  view.h  view_graph.h
include/optimization/: nec_ceres.h  nec_residual.h  pnec_ceres.h  pnec_residual.h  scf.h
include/rel_pose_estimation/: essential_matrix_methods.h  frame2frame.h  pnec.h  pnec_config.h
include/simulation/: anisotropy_experiments.h  experiments.h  offset_experiments.h  outlier_experiments.h  sim_common.h  standard_experiments.h
pypnec_t/: pypnec.py
python/: CMakeLists.txt  pypnec.cpp
scripts/: Loss-Landscape-rotation.ipynb  Loss-Landscape-translation.ipynb  dataset_evaluation.py  method_evaluation.py  sequence_evaluation.py  simulated_evaluation.py  tex.mplstyle
scripts/pnec/: SimCamera.py  common.py  helper.py  math.py  scf.py
scripts/pnec/latex/: Tables.py
scripts/pnec/metrics/: l1_error.py  l1_rpe_1.py  l1_rpe_n.py  r_t.py  rmse.py  rpe_1.py  rpe_n.py
scripts/pnec/plotting/: CDFDistribution.py  CameraBox.py  CameraPoints.py  Covariance3D.py  Errors.py  FigureSize.py  Metrics.py  Plane.py  Trajectories.py  YPR.py
scripts/pnec/simulation/: load_experiment.py
scripts/pnec/visual_odometry/io/: evaluate_run.py
scripts/pnec/visual_odometry/trajectory/: correction.py
src/: create_sim_experiments.cc  pnec_vo.cc  run_simulation.cc  uncertainty_extraction.cc  uncertainty_extraction_vo.cc
src/common/: camera.cc  common.cc  converter.cc  timing.cc  visualization.cc
src/features/: base_matcher.cc  tracking_matcher.cc
src/frames/: base_frame.cc  keypoints.cc  tracking_frame.cc
src/io/: config.cc  dataset_loader.cc  odometry_output.cc
src/odometry/: frame_processing.cc  view_graph.cc
src/optimization/: nec_ceres.cc  pnec_ceres.cc  scf.cc
src/rel_pose_estimation/: essential_matrix_methods.cc  frame2frame.cc  pnec.cc
src/simulation/: anisotropy_experiments.cc  experiments.cc  offset_experiments.cc  outlier_experiments.cc  sim_common.cc  standard_experiments.cc
